[package]
name = "circular-enterprise-apis"
version = "1.0.0"
edition = "2021"

[lib]
# This explicitly tells Cargo that src/lib.rs is your library crate
path = "src/lib.rs"

[dependencies]
# These are dependencies used by your main library (src/lib.rs)
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
once_cell = "1.19.0" # Used for Lazy initialization
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] } # If your library uses async/await
futures = "0.3" # Often used with tokio for async operations
url = "2.5.0" # Make sure this is present for URL parsing
chrono = "0.4"
k256 = { version = "0.13", features = ["ecdsa", "pem"] }
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
# These are dependencies used only for tests, examples, and benchmarks
mockito = "1.2.0" # This is crucial for mocking in tests
dotenvy = "0.15"