[package]
name = "cep-sdk"
version = "0.1.0"
edition = "2021"
description = "A Rust SDK for the Circular ESM Enterprise APIs"
license = "MIT"

[dependencies]
# Async runtime and HTTP client
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Serialization and Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"

# Cryptography
hex = "0.4"
sha2 = "0.10"
secp256k1 = { version = "0.27", features = ["global-context", "recovery"] }

[dev-dependencies]
rstest = "0.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
assert_matches = "1.1"
mockito = "1.2"