[package]
name = "circular-enterprise-apis"
version = "1.0.13"
edition = "2021"
description = "CIRCULAR Enterprise APIs for Data Certification"
license = "MIT"

[dependencies]
# Async runtime and HTTP client
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Serialization and Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"

# Cryptography
hex = "0.4"
sha2 = "0.10"
secp256k1 = "0.27"
rand = "0.8"

# Time handling
chrono = "0.4"

# URL encoding
urlencoding = "2.1"

[dev-dependencies]
rstest = "0.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
assert_matches = "1.1"
mockito = "1.2"
tokio-test = "0.4"